working on counter, controller, and repository

--- a/LuresWebApp/LuresWebApp/LuresWebApp.csproj
+++ b/LuresWebApp/LuresWebApp/LuresWebApp.csproj
@@ -286,6 +286,12 @@
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LuresWebLib\LuresWebLib.csproj">
+      <Project>{add4d3d1-a388-48d5-ab1c-eda50ee4ca1e}</Project>
+      <Name>LuresWebLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
