--- a/LuresWebApp/CreateUpdateLuresDb/packages.config
+++ b/LuresWebApp/CreateUpdateLuresDb/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="dbup" version="3.3.5" targetFramework="net452" />
+  <package id="dbup-sqlite" version="3.3.5" targetFramework="net452" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
-  <package id="FileHelpers" version="3.1.5" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.103" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.103" targetFramework="net452" />
   <package id="System.Data.SQLite.EF6" version="1.0.103" targetFramework="net452" />
