--- a/LuresWebApp/LuresWebApp/LuresWebApp.csproj
+++ b/LuresWebApp/LuresWebApp/LuresWebApp.csproj
@@ -319,6 +319,7 @@
     <Content Include="Views\_LureDetails.cshtml" />
     <Content Include="Scripts\jquery-3.1.0.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.0.min.map" />
+    <Content Include="Views\Home\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
